--- a/sandbox/gradle/wrapper/gradle-wrapper.properties
+++ b/sandbox/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Sat May 23 23:00:49 PDT 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.4-bin.zip
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
